--- a/client/src/components/Card/Card.scss
+++ b/client/src/components/Card/Card.scss
@@ -40,6 +40,7 @@
         border-top-left-radius: 5px;
         border-top-right-radius: 5px;
         margin-bottom: 5%;
+        filter: grayscale(100%);
 
     }
 
