--- a/client/src/components/Collection/OpenPacks/NewCard/NewCard.css
+++ b/client/src/components/Collection/OpenPacks/NewCard/NewCard.css
@@ -36,6 +36,43 @@
   color: #fff;
 }
 
+.charCard .charCard-image {
+  height: 24.15vh;
+  width: 12.075vw;
+  max-height: 24.15vh;
+  max-width: 12.075vw;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  margin-bottom: 5%;
+  -webkit-filter: grayscale(100%);
+          filter: grayscale(100%);
+}
+
+.charCard .charCard-text {
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+  margin-left: 2.5%;
+  font-size: smaller;
+}
+
+.charCard .charCard-name {
+  font-size: smaller;
+  margin-top: 2%;
+  margin-bottom: 0.75%;
+}
+
+.charCard .charCard-rarity {
+  font-size: x-small;
+  margin-top: 2%;
+  margin-bottom: 0.75%;
+}
+
+.charCard .charCard-id {
+  font-size: x-small;
+  margin-top: 2%;
+  margin-bottom: 0.75%;
+}
+
 .bronze {
   background-color: #cd7f32;
 }
