--- a/client/src/components/Card/Card.scss
+++ b/client/src/components/Card/Card.scss
@@ -90,6 +90,7 @@
     background-color: rgb(214, 172, 110);
 }
 
+// ! Add animation to change background 
 .holo {
     // background-image: linear-gradient(to left,rgb(117, 202, 213), rgb(238, 167, 238), rgb(157, 108, 192), rgb(117, 202, 213), rgb(157, 108, 192),  rgb(238, 167, 238),rgb(117, 202, 213));
     // color: transparent;
