--- a/client/src/components/Card/Card.scss
+++ b/client/src/components/Card/Card.scss
@@ -94,11 +94,15 @@
 .holo {
     // background-image: linear-gradient(to left,rgb(117, 202, 213), rgb(238, 167, 238), rgb(157, 108, 192), rgb(117, 202, 213), rgb(157, 108, 192),  rgb(238, 167, 238),rgb(117, 202, 213));
     // color: transparent;
-    background-image: linear-gradient(to right,
+    background-image: linear-gradient(90deg,
             rgb(194, 255, 182),
             rgb(255, 163, 182),
             rgb(221, 169, 255),
             rgb(162, 209, 255));
+            background-size: 400% 400%;
+
+    animation: gradient 20s ease infinite;
+
 }
 
 
@@ -130,3 +134,16 @@
     }
 
 }
+
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+    }
