--- a/client/src/components/Collection/YourCards/YourCards.scss
+++ b/client/src/components/Collection/YourCards/YourCards.scss
@@ -1,7 +1,7 @@
 .displayCards-page{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    // justify-content: center;
     align-items: center;
 }
 
@@ -50,5 +50,28 @@
         text-align: left;
         color: #79D9FF;
     }
-    
+
+}
+
+.yourCards-filter-container{
+    margin-top: 5%;
+    margin-bottom: -5%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    color: #fff;
+    top: 25%;
+}
+
+
+.yourCards-tab {
+    align-self: center;
+    justify-self: center;
+    background-color: rgba(198, 74, 112, 0.534);
+    height: 5vh;
+    width: 100%;
+    transition: .5s ease;
+    padding-top: .75%;
+    margin-right: 5%
+
 }
