--- a/client/src/components/Collection/YourCards/YourCards.scss
+++ b/client/src/components/Collection/YourCards/YourCards.scss
@@ -59,7 +59,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    color: #fff;
+    color: rgba(65, 65, 65, 0.643);
     top: 25%;
 }
 
@@ -67,11 +67,18 @@
 .yourCards-tab {
     align-self: center;
     justify-self: center;
-    background-color: rgba(198, 74, 112, 0.534);
+    // background-color: rgba(198, 74, 111, 0.386);
     height: 5vh;
     width: 100%;
     transition: .5s ease;
     padding-top: .75%;
-    margin-right: 5%
+    margin-right: 5%;
 
+    &:hover{
+        cursor: pointer;
+    }
+}
+
+.selected{
+color: #fff
 }
