--- a/client/src/components/About/About.scss
+++ b/client/src/components/About/About.scss
@@ -1,4 +1,168 @@
-.test{
-    color:red;
-    background-color: black;
+.about-page-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-content: center;
+    align-items: center;
+    min-height: 100vh;
 }
+
+.qr-container{
+    height: 35vh;
+    width: 20vw;
+    background-color: rgb(57, 57, 57);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+}
+
+.qr-code{
+    height: 30vh;
+    align-self: center;
+
+}
+
+
+
+.aboutCard {
+    margin: 4px;
+    transform: scale(1);
+    perspective: 600px;
+    // cursor: pointer;
+    background-color: rgb(109, 109, 109);
+    // width: 10.65vw;
+    // height: 27vh;
+    width: 22.5vw;
+    height: 57.1875vh;
+    border-radius: 5px;
+    transition: .5s ease;
+    text-transform: uppercase;
+
+
+
+
+    &:hover {
+        z-index: 10;
+        transform: scale(1.5);
+        border: 1px solid rgba(0, 0, 0, 0.24);
+        transition: .5s ease;
+    }
+
+    .aboutCard-info-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        color: rgba(255, 255, 255, 0.584)
+    }
+
+    .aboutCard-image {
+        height: 45.28125vh;
+        width: 22.5vw;
+
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+        margin-bottom: 5%;
+        filter: grayscale(100%);
+        border-bottom: 3px solid rgba(255, 255, 255, 0.584);
+    }
+
+    .aboutCard-text{
+        align-self: flex-start;
+        margin-left: 2.5%;
+        font-size: larger;
+        cursor: default;
+
+    }
+
+    .aboutCard-name {
+        // margin-right: 2.5%;
+        font-size: larger;
+        margin-top: 2%;
+        margin-bottom: 0.75%;
+    }
+
+    .aboutCard-rarity {
+        // margin-right: 2.5%;
+        font-size: small;
+        margin-top: 2%;
+        margin-bottom: 0.75%;
+    }
+
+    .aboutCard-id {
+        // margin-right: 2.5%;
+        font-size: small;
+        margin-top: 2%;
+        margin-bottom: 0.75%;
+    }
+
+}
+
+.bronze {
+    background-color: #cd7f32;
+}
+
+.silver {
+    background-color: rgb(175, 174, 171);
+}
+
+.gold {
+    background-color: rgb(214, 172, 110);
+}
+
+.holo {
+    // background-image: linear-gradient(to left,rgb(117, 202, 213), rgb(238, 167, 238), rgb(157, 108, 192), rgb(117, 202, 213), rgb(157, 108, 192),  rgb(238, 167, 238),rgb(117, 202, 213));
+    // color: transparent;
+    background-image: linear-gradient(90deg,
+            rgb(194, 255, 182),
+            rgb(255, 163, 182),
+            rgb(221, 169, 255),
+            rgb(162, 209, 255));
+            background-size: 400% 400%;
+
+    animation: gradient 20s ease infinite;
+
+}
+
+
+.unopened {
+    background-color: rgb(8, 8, 8);
+    cursor: pointer;
+
+
+    .aboutCard-info-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        color: rgb(8, 8, 8);
+        visibility: hidden;
+    }
+}
+
+.floppy-icon{
+    position: absolute;
+    height: 8.25vh;
+    filter: opacity(.25);
+    top: 83%;
+    left: 75%;
+    transition: .5s ease;
+
+    &:hover{
+        filter: opacity(90%);
+        transition: .5s ease;
+    }
+
+}
+
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+    }
