--- a/client/src/components/Card/Card.scss
+++ b/client/src/components/Card/Card.scss
@@ -19,7 +19,7 @@
     &:hover {
         z-index: 10;
         transform: scale(1.5);
-        border: 1px solid rgba(0, 0, 0, 0.24);
+        outline: 1px solid rgba(0, 0, 0, 0.103);
         transition: .5s ease;
     }
 
