updated seeds, added repo qr, updated transaction validations

--- a/client/src/components/Collection/OpenPacks/Modal/Modal.scss
+++ b/client/src/components/Collection/OpenPacks/Modal/Modal.scss
@@ -26,7 +26,7 @@
 
  .openedCards-container {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     flex-wrap: wrap;
     align-content: space-evenly;
     min-height: 100vh;
