--- a/client/src/components/Collection/OpenPacks/Modal/Modal.css
+++ b/client/src/components/Collection/OpenPacks/Modal/Modal.css
@@ -38,8 +38,9 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   -ms-flex-line-pack: space-evenly;
