--- a/client/src/components/Collection/OpenPacks/PackToOpen/PackToOpen.scss
+++ b/client/src/components/Collection/OpenPacks/PackToOpen/PackToOpen.scss
@@ -56,14 +56,69 @@
 .pack-info-container{ 
 display: flex;
 flex-direction: column;
-align-content: center;
 justify-content: center;
-align-items: center;
 color: #fff
 }
 
 .floppy{
     height: 30vh;
-    filter: opacity(.35) 
+    filter: opacity(.35);
+    margin-top: -2.5% 
 }
 
+.pack-icon{
+    height: 25vh;
+    filter: opacity(.5);
+}
+
+.pack-count{
+    font-size: large;
+    margin-bottom: 2.5%;
+    // font-weight: bold;
+    color: rgba(255, 255, 255, 0.755);
+}
+
+
+.pack-title{
+    font-size: larger;
+    font-weight: 300;
+    color: rgba(255, 255, 255, 0.384); 
+}
+
+
+.top{
+    margin-top: 2.5%;
+    transform: scale(1, -1);
+    margin-bottom: 7.5%;    
+}
+
+
+
+
+.booster-text {
+    color: rgb(2, 28, 88);
+}
+
+.regular-text {
+    color: #b05901;
+}
+
+.pro-text {
+    color: rgb(175, 174, 171);
+}
+
+.max-text {
+    color: rgb(155, 117, 3);
+}
+
+.ultra-text {
+    color: rgb(1, 149, 159);
+}
+
+.studio-text {
+    color: rgb(108, 8, 175);
+}
+
+.buy-more-text{
+    color: rgb(4, 77, 34);
+}
