--- a/client/src/components/Collection/OpenPacks/PackToOpen/PackToOpen.css
+++ b/client/src/components/Collection/OpenPacks/PackToOpen/PackToOpen.css
@@ -90,9 +90,12 @@
 
 .top {
   margin-top: 2.5%;
-  -webkit-transform: scale(1, -1);
-          transform: scale(1, -1);
   margin-bottom: 7.5%;
+}
+
+.inverse {
+  -webkit-transform: scale(-1, -1);
+          transform: scale(-1, -1);
 }
 
 .booster-text {
@@ -104,7 +107,7 @@
 }
 
 .pro-text {
-  color: #afaeab;
+  color: #83827f;
 }
 
 .max-text {
@@ -120,6 +123,6 @@
 }
 
 .buy-more-text {
-  color: #044d22;
+  color: #09853d;
 }
 /*# sourceMappingURL=PackToOpen.css.map */
