--- a/client/src/components/Collection/OpenPacks/PackToOpen/PackToOpen.css
+++ b/client/src/components/Collection/OpenPacks/PackToOpen/PackToOpen.css
@@ -63,19 +63,6 @@
   color: #fff;
 }
 
-.floppy {
-  height: 30vh;
-  -webkit-filter: opacity(0.35);
-          filter: opacity(0.35);
-  margin-top: -2.5%;
-}
-
-.pack-icon {
-  height: 25vh;
-  -webkit-filter: opacity(0.5);
-          filter: opacity(0.5);
-}
-
 .pack-count {
   font-size: large;
   margin-bottom: 2.5%;
@@ -124,5 +111,12 @@
 
 .buy-more-text {
   color: #09853d;
+}
+
+.pack-logo {
+  height: 30vh;
+  -webkit-filter: opacity(0.35);
+          filter: opacity(0.35);
+  margin-top: -2.5%;
 }
 /*# sourceMappingURL=PackToOpen.css.map */
