pack style update without pack count

--- a/client/src/components/Collection/OpenPacks/PackToOpen/PackToOpen.css
+++ b/client/src/components/Collection/OpenPacks/PackToOpen/PackToOpen.css
@@ -80,6 +80,10 @@
   margin-bottom: 7.5%;
 }
 
+.bottom {
+  margin-top: 2.5%;
+}
+
 .inverse {
   -webkit-transform: scale(-1, -1);
           transform: scale(-1, -1);
