--- a/client/src/components/Collection/OpenPacks/PackToOpen/PackToOpen.scss
+++ b/client/src/components/Collection/OpenPacks/PackToOpen/PackToOpen.scss
@@ -86,6 +86,10 @@ color: #fff
     margin-bottom: 7.5%;    
 }
 
+.bottom{
+    margin-top: 2.5%;
+}
+
 
 .inverse {
     transform: scale(-1, -1); 
