finalized style for pack

--- a/client/src/components/Collection/OpenPacks/PackToOpen/PackToOpen.css
+++ b/client/src/components/Collection/OpenPacks/PackToOpen/PackToOpen.css
@@ -57,16 +57,28 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  color: #fff;
 }
 
 .pack-count {
-  font-size: large;
-  margin-bottom: 2.5%;
-  color: rgba(255, 255, 255, 0.755);
+  font-size: 12vh;
+  margin-bottom: 7.25vh;
+  margin-top: 6.75vh;
+  font-weight: bold;
+  -webkit-transition: .5s ease;
+  transition: .5s ease;
+  z-index: 10;
+}
+
+.pack-count:hover {
+  color: rgba(255, 255, 255, 0.871) !important;
+  -webkit-transition: .5s ease;
+  transition: .5s ease;
+}
+
+.pack-count:active {
+  color: #79D9FF !important;
+  -webkit-transition: .5s ease;
+  transition: .5s ease;
 }
 
 .pack-title {
@@ -81,7 +93,7 @@
 }
 
 .bottom {
-  margin-top: 2.5%;
+  margin-top: 7.5%;
 }
 
 .inverse {
@@ -119,8 +131,9 @@
 
 .pack-logo {
   height: 30vh;
-  -webkit-filter: opacity(0.35);
-          filter: opacity(0.35);
-  margin-top: -2.5%;
+  -webkit-filter: opacity(0.25);
+          filter: opacity(0.25);
+  margin-top: 0%;
+  position: absolute;
 }
 /*# sourceMappingURL=PackToOpen.css.map */
