--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -2,6 +2,10 @@
   position: fixed;
   overflow: hidden;
   height: auto;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
   z-index: -2;
 }
 
