updated menu colors

--- a/client/src/components/Auth/LogIn/LogIn.scss
+++ b/client/src/components/Auth/LogIn/LogIn.scss
@@ -7,7 +7,7 @@
   overflow: hidden;
   // cursor: pointer;
   background-color: whitesmoke;
-  background: linear-gradient(140deg, rgb(96, 39, 187), white, gray);
+  background: linear-gradient(140deg, rgb(135, 206, 250), rgb(255, 105, 180), rgb(0, 255, 174));
   display: flex;
   flex-direction: column;
 
