--- a/client/src/components/Auth/SignUp/SignUp.scss
+++ b/client/src/components/Auth/SignUp/SignUp.scss
@@ -7,7 +7,7 @@
   overflow: hidden;
   // cursor: pointer;
   background-color: whitesmoke;
-  background: linear-gradient(140deg, #d33, beige, green);
+  background: linear-gradient(140deg, rgb(216, 224, 221), rgb(135, 206, 250), rgb(0, 255, 174));
   display: flex;
   flex-direction: column;
 
