--- a/client/src/components/Auth/LogIn/LogIn.css
+++ b/client/src/components/Auth/LogIn/LogIn.css
@@ -12,7 +12,7 @@
   position: relative;
   overflow: hidden;
   background-color: whitesmoke;
-  background: linear-gradient(140deg, #6027bb, white, gray);
+  background: linear-gradient(140deg, lightskyblue, hotpink, #00ffae);
   display: flex;
   flex-direction: column;
 }
