--- a/client/src/components/Auth/SignUp/SignUp.css
+++ b/client/src/components/Auth/SignUp/SignUp.css
@@ -12,7 +12,7 @@
   position: relative;
   overflow: hidden;
   background-color: whitesmoke;
-  background: linear-gradient(140deg, #d33, beige, green);
+  background: linear-gradient(140deg, #d8e0dd, lightskyblue, #00ffae);
   display: flex;
   flex-direction: column;
 }
