--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -161,7 +161,7 @@
 }
 
 .menu__slot:hover .zuckerberg {
-  background-image: url("./zuckerberg.png");
+  background-image: url("./zuckerb.png");
   background-position: 57.5% -30px;
   -webkit-filter: grayscale(100%);
           filter: grayscale(100%);
@@ -244,6 +244,13 @@
 .menu__slot:hover .guido {
   background-image: url("./guido.png");
   background-position: 70% -40px;
+  -webkit-filter: grayscale(100%);
+          filter: grayscale(100%);
+}
+
+.menu__slot:hover .eich {
+  background-image: url("./eich.png");
+  background-position: 40% -10px;
   -webkit-filter: grayscale(100%);
           filter: grayscale(100%);
 }
