--- a/client/src/components/Home/Home.scss
+++ b/client/src/components/Home/Home.scss
@@ -60,27 +60,25 @@
   &:nth-child(1):hover {
     background: linear-gradient(140deg, rgb(51, 143, 200), rgb(250, 216, 216), rgb(255, 105, 180));
   }
-  
+
   &:nth-child(2):hover {
     background: linear-gradient(-280deg, rgb(216, 224, 221), rgb(135, 206, 250), rgb(242, 163, 202));
   }
-  
+
   &:nth-child(3):hover {
     background: linear-gradient(-140deg, rgb(255, 105, 180), rgb(173, 216, 230), rgb(235, 251, 255));
   }
-  
+
   &:nth-child(4):hover {
     background: linear-gradient(100deg, rgb(242, 163, 202), rgb(203, 226, 233), rgb(77, 148, 241), );
   }
-  
+
   &:nth-child(5):hover {
     background: linear-gradient(140deg, rgb(135, 206, 250), rgb(191, 119, 155), rgb(228, 245, 252));
   }
-  
-  
+
+
 }
-
-
 
 
 .slot-item-1 {
@@ -212,19 +210,19 @@
 
 .menu__slot:hover .annie {
   background-image: url('./annie.png');
-  background-position:70% -40px;
+  background-position: 70% -40px;
   filter: grayscale(100%);
 }
 
 .menu__slot:hover .clarence {
   background-image: url('./clarence.png');
-  background-position:70% -40px;
+  background-position: 70% -40px;
   filter: grayscale(100%);
 }
 
 .menu__slot:hover .guido {
   background-image: url('./guido.png');
-  background-position:70% -40px;
+  background-position: 70% -40px;
   filter: grayscale(100%);
 }
 
@@ -277,6 +275,8 @@
   z-index: 1;
   line-height: 1.5em;
   color: #fff;
+  font-weight: 400;
+  text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #ff984400, 0 0 0.5em #ff984400, 0 0 0.1em #ff984400, 0 1px 3px #000;
 }
 
 .menu__slot:hover>div>p {
