--- a/client/src/components/Auth/Edit/Edit.css
+++ b/client/src/components/Auth/Edit/Edit.css
@@ -12,7 +12,7 @@
   position: relative;
   overflow: hidden;
   background-color: whitesmoke;
-  background: linear-gradient(140deg, lightskyblue, hotpink, #00ffae);
+  background: linear-gradient(140deg, #338fc8, #f7eeee, hotpink);
   display: flex;
   flex-direction: column;
 }
