--- a/client/src/components/Home/Home.scss
+++ b/client/src/components/Home/Home.scss
@@ -148,7 +148,7 @@
 }
 
 .menu__slot:hover .zuckerberg {
-  background-image: url('./zuckerb.png');
+  background-image: url('./zuckerberg.png');
   background-position: 57.5% -30px;
   filter: grayscale(100%);
 }
