login/signup page styling updates

--- a/client/src/components/Auth/SignUp/SignUp.scss
+++ b/client/src/components/Auth/SignUp/SignUp.scss
@@ -7,7 +7,7 @@
   overflow: hidden;
   // cursor: pointer;
   background-color: whitesmoke;
-  background: linear-gradient(140deg, rgb(216, 224, 221), rgb(135, 206, 250), rgb(0, 255, 174));
+  background: linear-gradient(100deg, rgb(242, 163, 202), rgb(203, 226, 233), rgb(77, 148, 241), );
   display: flex;
   flex-direction: column;
 
