--- a/client/src/components/Collection/YourCards/YourCards.scss
+++ b/client/src/components/Collection/YourCards/YourCards.scss
@@ -58,8 +58,7 @@
     margin-bottom: -5%;
     display: flex;
     flex-direction: row;
-    // justify-content: space-around;
-    color: rgba(65, 65, 65, 0.643);
+    color: rgba(65, 65, 65, 0.729);
     top: 25%;
 }
 
@@ -67,9 +66,7 @@
 .yourCards-tab {
     align-self: center;
     justify-self: center;
-    // background-color: rgba(198, 74, 111, 0.386);
     height: 5vh;
-    // width: 100%;
     font-size: larger;
     transition: .5s ease;
     padding-top: .75%;
@@ -122,7 +119,7 @@
 }
 
 .search-input {
-    background-color: rgb(54, 54, 54);
+    background-color: rgba(54, 54, 54, 0.709);
     border: none;
     border-radius: 6px;
     margin-bottom: 2.75%;
